[gd_scene load_steps=4 format=3 uid="uid://c42s0ebb2ovv3"]

[ext_resource type="Texture2D" uid="uid://b7gdkmb15vvwm" path="res://assets/npatch.png" id="1_ywnoi"]
[ext_resource type="PackedScene" uid="uid://c6ly18g6xoioh" path="res://scenes/hole.tscn" id="2_jy7pm"]
[ext_resource type="Script" uid="uid://d11sye0oni84h" path="res://scenes/tile.gd" id="2_q7utx"]

[node name="Tile" type="NinePatchRect"]
offset_right = 256.0
offset_bottom = 256.0
texture = ExtResource("1_ywnoi")
script = ExtResource("2_q7utx")

[node name="Hole" parent="." instance=ExtResource("2_jy7pm")]
layout_mode = 0

[node name="Hole2" parent="." instance=ExtResource("2_jy7pm")]
layout_mode = 0
offset_left = 128.0
offset_right = 256.0

[node name="Hole3" parent="." instance=ExtResource("2_jy7pm")]
layout_mode = 0
offset_top = 128.0
offset_bottom = 256.0

[node name="Hole4" parent="." instance=ExtResource("2_jy7pm")]
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 256.0
